add practice new page

--- a/BoxModel.htm
+++ b/BoxModel.htm
@@ -6,18 +6,23 @@
 	<link rel="stylesheet" href="css/BoxModel.css">
 </head>
 <body>
-	<div class="head">
-		<div class="head_menu"></div>
+	<div class="transition">transition</div>
+	<div class="translate">translate</div>
+	<div class="b_rotate">
+		<div class="rotate">rotate</div>
 	</div>
-	<div class="body">
-		<div class="img"></div>
-		<div class="message"></div>
-		<div class="content1"></div>
-		<div class="content2"></div>
+	<div class="b_scale">
+		<div class="scale"></div>
 	</div>
-	<div class="footer">
-		<div class="foot_top"></div>
-		<div class="foot_bottom"></div>
+	<div class="b_skew">
+		<div class="skew"></div>
+	</div>
+	<div class="rotate2d">2D transition</div>
+	<div class="rotate3d">3D transition</div>
+	<div class="animation">
+		<div class="an1">floor1</div>
+		<div class="an2">floor2</div>
+		<div class="an3">floor3</div>
 	</div>
 </body>
 </html>
