--- a/index.html
+++ b/index.html
@@ -19,11 +19,28 @@
 							<li><a href="#">VIP服务</a></li>
 						</ul>
 					</div>
+					<div class="heading_img">
+						<img src="img/jokul.jpg" alt="">
+					</div>
+					<div class="heading_soptlight">
+						<form action="">
+							<input type="text">
+						</form>
+					</div>
 				</div>
 			</div>
-			<div class="body"></div>
+			<div class="body">
+				<div class="body_title">
+					<h3>熟悉极客学院</h3>
+					<p>aaaaa</p>
+					<hr>
+					<hr>
+				</div>
+			</div>
 		</div>
-		<div class="footing"></div>
+		<div class="footing">
+			@极客学院
+		</div>
 	</div>
 </body>
 </html>
