--- a/login.html
+++ b/login.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>login page paractise</title>
-	<link rel="stylesheet" type="text/css" href="css/css.css">
-	<script type="text/javascript" src="js/jquery.min_wev8.js"></script>
-	<script type="text/javascript" src="js/login.js"></script>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/css.css">
 </head>
 <body>
-	<div class="bg2">
-		<div class="box0">
-			<div class="box1"></div>
-			<div class=box2></div>
+	<div class="navcont">
+		<div class="nav">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About Me</a></li>
+				<li>
+					<a href="#">Portfolio</a>
+					<ul>
+						<li><a href="#">Web</a></li>
+						<li><a href="#">Print</a></li>
+						<li><a href="#">The rest</a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+					<ul>
+						<li><a href="#">Web</a></li>
+						<li><a href="#">Print</a></li>
+						<li><a href="#">The rest</a></li>
+					</ul>
+				</li>
+			</ul>			
 		</div>
 	</div>
 </body>
