--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>极客学院</title>
-	<link rel="stylesheet" href="css/style.css">
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>极客学院</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-	<div class="container">
-		<div class="wrapper">
-			<div class="heading">
-				<div class="heading_nav">
-					<div class="heading_title">极客学院</div>
-					<div class="heading_navbar">
-						<ul>
-							<li><a href="#">首页</a></li>
-							<li><a href="#">职业课程</a></li>
-							<li><a href="#">技术问答</a></li>
-							<li><a href="#">VIP服务</a></li>
-						</ul>
-					</div>
-					<div class="heading_img">
-						<img src="img/jokul.jpg" alt="">
-					</div>
-					<div class="heading_soptlight">
-						<form action="">
-							<input type="text">
-						</form>
-					</div>
-				</div>
-			</div>
-			<div class="body">
-				<div class="body_title">
-					<h3>熟悉极客学院</h3>
-					<p>aaaaa</p>
-					<hr>
-					<hr>
-				</div>
-			</div>
-		</div>
-		<div class="footing">
-			@极客学院
-		</div>
-	</div>
+    <div class="container">
+        <div class="wrapper">
+            <div class="heading">
+                <div class="heading_nav">
+                    <div class="heading_title">
+                        极客学院
+                    </div>
+                    <div class="heading_navbar">
+                        <ul>
+                            <li><a href="#">首页</a></li>
+                            <li><a href="#">职业课程</a></li>
+                            <li><a href="#">技术问答</a></li>
+                            <li><a href="#">VIP会员</a></li>
+                        </ul>
+                    </div>
+                    <div class="heading_img">
+                        <img src="img/jokul.jpg">
+                    </div>
+                    <div class="heading_soptlight">
+                        <form>
+                            <input type="text">
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="body">
+                <div class="body_title">
+                    <h3>熟悉极客学院</h3>
+                    <p>加入极客学院，学习最新实战教程，全面提升你的技术能力</p>
+                </div>
+                <hr/>
+                <hr/>
+            </div>
+        </div>
+        <div class="footing">
+            @极客学院
+        </div>
+    </div>
 </body>
 </html>
